Ajout de la famille

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<h3 class="moi">Moi</h3>
 	<p>
-		Je m'appelle Anouk (comme vous avez pus le constater!) J'ai les cheveux brun foncés, les yeux marrons,bleu, gris,bleu ou marrons,gris je n'ai jamais su. 
+		Je m'appelle Anouk (comme vous avez pus le constater!) J'ai les cheveux bruns foncés, les yeux marrons,bleu, gris,bleu ou marrons,gris je n'ai jamais su. 
 	</p>
 	<p>
 		J'adort les écrands (surtout les jeux vidéo) j'aime bien aussi la lecture surtout les mangas et les contes comme HARRY POTTER.
@@ -52,12 +52,36 @@
 	<div>
 		<img src="./photos/anouk_indila_petit.jpg" />
 		<p>
-			Ca c'est moi avec la tete d'Indila (une chanteuse)
+			Ca c'est moi avec la tête d'Indila (une chanteuse)
 		</p>
 
 	</div>
 	
 	<h3 class="famille">Ma famille</h3>
+   <p>
+       Dans ma famille il y moi mais pas que (c'est évident).
+   </p>
+
+   <p>
+   	J'ai un petit frère qui s'appelle Luka. Ca couleur préférée c'est le jaune. Il a les cheveux bruns et les yeux marrons.
+   </p>
+
+   <p>
+   	J'ai aussi une maman (ça aussi c'est évident) et elle s'appelle Karine. Elle a les cheveux gris (elle se les est tintés). Elle a les yeux de la même couleur que Luka.
+   </p>
+
+   <p>
+   	J'ai aussi un papa (ça aussi c'est évident) et il s'appelle Aymerick. Il a les cheveux noirs. Il a les yeux bleus verts gris.
+
+
+
+
+
+
+
+
+
+
 
 </body>
 
