Changemenet de couleur de cheveux

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
    </p>
 
    <p>
-   	J'ai aussi une maman (ça aussi c'est évident) et elle s'appelle Karine. Elle a les cheveux gris (elle se les est tintés). Elle a les yeux de la même couleur que Luka.
+   	J'ai aussi une maman (ça aussi c'est évident) et elle s'appelle Karine. Elle a les cheveux noirs/gris. Elle a les yeux de la même couleur que Luka.
    </p>
 
    <p>
-   	J'ai aussi un papa (ça aussi c'est évident) et il s'appelle Aymerick. Il a les cheveux noirs. Il a les yeux bleus verts gris.
+   	J'ai aussi un papa (ça aussi c'est évident) et il s'appelle Aymerick. Il a les cheveux noirs/gris. Il a les yeux bleus verts gris.
 
 
 
