ajoue des copines

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 	h3.moi { color: fuchsia;}
 	h3.famille {color:blue;}
-
+    h3.copines{color:navy;}
+	ul.copines{color:red}
 	div {
 		display: inline-block;
 		margin-right: 50px;
@@ -67,11 +68,29 @@
    </p>
 
    <p>
-   	J'ai aussi une maman (ça aussi c'est évident) et elle s'appelle Karine. Elle a les cheveux noirs/gris. Elle a les yeux de la même couleur que Luka.
+   	J'ai aussi une maman (ça aussi c'est évident) et elle s'appelle Karine. Elle a les cheveux noirs/gris. Elle a les yeux de la même couleur que Luka. Ca couleur préférée c'est le rouge.
    </p>
 
    <p>
-   	J'ai aussi un papa (ça aussi c'est évident) et il s'appelle Aymerick. Il a les cheveux noirs/gris. Il a les yeux bleus verts gris.
+   	J'ai aussi un papa (ça aussi c'est évident) et il s'appelle Aymerick. Il a les cheveux noirs/gris. Il a les yeux bleus verts gris.Ca couleur préférée c'est le bleu. 
+    </p>
+
+    <h3 class="copines">Mes meilleures copines</h3>
+    <p>
+    	<ul class="copines">
+    		<li>Romy: elle fait trop bien de la gym et c'est ma mailleure amie. On se fache quaziment jamais.</li>
+    		<li>Noa:elle est passionner du cheval et elle est trop rigolote.</li>
+            <li>Clémence:elle aussi est passionner du cheval et elle est trop rigolote. Parfois elle fait un rire trop bizard.</li>
+            <li>Anaelle:elle adore les chat et elle aussi elle est mignone comme un chat.</li>
+         </ul> 
+          </p>  
+
+    	
+
+   
+
+
+
 
 
 
