correction fautes orthographe

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 
 	<h3 class="moi">Moi</h3>
 	<p>
-		Je m'appelle Anouk (comme vous avez pus le constater!) J'ai les cheveux bruns foncés, les yeux marrons,bleu, gris,bleu ou marrons,gris je n'ai jamais su. 
+		Je m'appelle Anouk (comme vous avez pu le constater!) J'ai les cheveux bruns foncés, les yeux marrons, bleus, gris, bleus ou marrons, gris je n'ai jamais su. 
+	</p> 
+	<p>
+		J'adore les écrans (surtout les jeux vidéo) j'aime bien aussi la lecture surtout les mangas et les contes comme HARRY POTTER.
 	</p>
 	<p>
-		J'adort les écrands (surtout les jeux vidéo) j'aime bien aussi la lecture surtout les mangas et les contes comme HARRY POTTER.
+		Ma couleur préférée est le violet. Ma deuxième c'est le bleu et ma troisième c'est le rose.
 	</p>
 	<p>
-		Ma couleur préférée c'est violet. Ma deuxièmes c'est le bleu et ma troixièmes c'est le rose.
-	</p>
-	<p>
-		Mon fruit préféré c'est l'abricôt. Après c'est la poire, la banane, le kiwi, le melon... Mon l'égume préféré c'est la tomate. J'aime bien aussi le chocolat(mais sa c'est pas un l'égume LOL)
+		Mon fruit préféré est l'abricôt. Après c'est la poire, la banane, le kiwi, le melon... Mon légume préféré est la tomate. J'aime bien aussi le chocolat (mais ça ce n'est pas un légume LOL).
 	</p>
 
 	<div>
@@ -64,24 +64,24 @@
    </p>
 
    <p>
-   	J'ai un petit frère qui s'appelle Luka. Ca couleur préférée c'est le jaune. Il a les cheveux bruns et les yeux marrons.
+   	J'ai un petit frère qui s'appelle Luka. Sa couleur préférée c'est le jaune. Il a les cheveux bruns et les yeux marrons.
    </p>
 
    <p>
-   	J'ai aussi une maman (ça aussi c'est évident) et elle s'appelle Karine. Elle a les cheveux noirs/gris. Elle a les yeux de la même couleur que Luka. Ca couleur préférée c'est le rouge.
+   	J'ai aussi une maman (ça aussi c'est évident) et elle s'appelle Karine. Elle a les cheveux noirs/gris. Elle a les yeux de la même couleur que Luka. Sa couleur préférée c'est le rouge.
    </p>
 
    <p>
-   	J'ai aussi un papa (ça aussi c'est évident) et il s'appelle Aymerick. Il a les cheveux noirs/gris. Il a les yeux bleus verts gris.Ca couleur préférée c'est le bleu. 
+   	J'ai aussi un papa (ça aussi c'est évident) et il s'appelle Aymerick. Il a les cheveux noirs/gris. Il a les yeux bleus verts gris. Sa couleur préférée c'est le bleu. 
     </p>
 
     <h3 class="copines">Mes meilleures copines</h3>
     <p>
     	<ul class="copines">
-    		<li>Romy: elle fait trop bien de la gym et c'est ma mailleure amie. On se fache quaziment jamais.</li>
-    		<li>Noa:elle est passionner du cheval et elle est trop rigolote.</li>
-            <li>Clémence:elle aussi est passionner du cheval et elle est trop rigolote. Parfois elle fait un rire trop bizard.</li>
-            <li>Anaelle:elle adore les chat et elle aussi elle est mignone comme un chat.</li>
+    		<li>Romy: elle fait trop bien de la gym et c'est ma meilleure amie. On se fache quasiment jamais. Elle est trop rigolote et trop belle.</li>
+    		<li>Noa: elle est passionnée de cheval et elle est trop rigolote.</li>
+            <li>Clémence: elle aussi est passionnée de cheval et elle aussi est trop rigolote. Parfois elle fait un rire trop bizarre.</li>
+            <li>Anaelle: elle adore les chats et elle aussi elle est mignone comme un chat.</li>
          </ul> 
           </p>  
 
