rajout de copains

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
 	h3.moi { color: fuchsia;}
 	h3.famille {color:blue;}
-    h3.copines{color:navy;}
+   h3.copines{color:navy;}
+	h3.copains{color:#FF9900}
+	ul.copains{color:#6699FF}
 	ul.copines{color:red}
 	div {
 		display: inline-block;
 		margin-right: 50px;
 	}
-
 	</style>
 </head>
 
@@ -82,11 +83,15 @@
    		<li>Noa: elle est passionnée de cheval et elle est trop rigolote.</li>
         	<li>Clémence: elle aussi est passionnée de cheval et elle aussi est trop rigolote. Parfois elle fait un rire trop bizarre.</li>
         	<li>Anaelle: elle adore les chats et elle aussi elle est mignone comme un chat.</li>
-     	</ul> 
+     	</ul>
+   <h3 class="copains"> Mes meilleurs copains</h3> 	 
+   <p>
+       <ul class="copains">
+         <li>Hugo: Il est trop sympa, rigolot, beau gosse... (on est amoureux!):)</li> 
+         <li>Pablo: IL est trop sympa aussi et il est aussi rigolot.</li>
+         <li>Thomas:Ces un des plus rigolot de la classe (dans la classe on est 23 + notre maîtresse ça fait 24).</li>
    </p>
-
-
-
+  
 </body>
 
 </html>
