Ajout des pages famille et amis

--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!doctype html>
 
 <head>
-	<title>Les petites histoires d'Anouk</title>
+	<title>Les petites histoires d'Anoukcat</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<style>
 	h1 { color: green; }
 
 	h3.moi { color: fuchsia;}
-	h3.famille {color:blue;}
-   h3.copines{color:navy;}
-	h3.copains{color:#FF9900}
-	ul.copains{color:#6699FF}
-	ul.copines{color:red}
+   
 	div {
 		display: inline-block;
 		margin-right: 50px;
@@ -21,11 +17,14 @@
 </head>
 
 <body>
-	<h1>Le journal d'Anouk</h1>
+	<div>
+		<a href="index.html">Accueil</a> - <a href="famille.html">Famille</a> - <a href="amis.html">Meilleurs ami(e)s</a> - Astuces - Recettes
+	</div>
 
-	<h3 class="moi">Moi</h3>
+	<h1>Le journal d'Anoukcat</h1>
+
 	<p>
-		Je m'appelle Anouk (comme vous avez pu le constater!) J'ai les cheveux bruns foncés, les yeux marrons, bleus, gris, bleus ou marrons, gris je n'ai jamais su. 
+		Je m'appelle Anoukcat (comme vous avez pu le constater!) J'ai les cheveux bruns foncés, les yeux marrons-bleus, gris-bleus ou marrons-gris je n'ai jamais su. 
 	</p> 
 	<p>
 		J'adore les écrans (surtout les jeux vidéo) j'aime bien aussi la lecture surtout les mangas et les contes comme HARRY POTTER.
@@ -59,39 +58,6 @@
 
 	</div>
 	
-	<h3 class="famille">Ma famille</h3>
-   <p>
-       Dans ma famille il y moi mais pas que (c'est évident).
-   </p>
-
-   <p>
-   	J'ai un petit frère qui s'appelle Luka. Sa couleur préférée c'est le jaune. Il a les cheveux bruns et les yeux marrons.
-   </p>
-
-   <p>
-   	J'ai aussi une maman (ça aussi c'est évident) et elle s'appelle Karine. Elle a les cheveux noirs/gris. Elle a les yeux de la même couleur que Luka. Sa couleur préférée c'est le rouge.
-   </p>
-
-   <p>
-   	J'ai aussi un papa (ça aussi c'est évident) et il s'appelle Aymerick. Il a les cheveux noirs/gris. Il a les yeux bleus verts gris. Sa couleur préférée c'est le bleu. 
-   </p>
-
-   <h3 class="copines">Mes meilleures copines</h3>
-   <p>
-   	<ul class="copines">
-   		<li>Romy: elle fait trop bien de la gym et c'est ma meilleure amie. On se fache quasiment jamais. Elle est trop rigolote et trop belle.</li>
-   		<li>Noa: elle est passionnée de cheval et elle est trop rigolote.</li>
-        	<li>Clémence: elle aussi est passionnée de cheval et elle aussi est trop rigolote. Parfois elle fait un rire trop bizarre.</li>
-        	<li>Anaelle: elle adore les chats et elle aussi elle est mignone comme un chat.</li>
-     	</ul>
-   <h3 class="copains"> Mes meilleurs copains</h3> 	 
-   <p>
-       <ul class="copains">
-         <li>Hugo: Il est trop sympa, rigolot, beau gosse... (on est amoureux!):)</li> 
-         <li>Pablo: IL est trop sympa aussi et il est aussi rigolot.</li>
-         <li>Thomas:Ces un des plus rigolot de la classe (dans la classe on est 23 + notre maîtresse ça fait 24).</li>
-   </p>
-  
 </body>
 
 </html>
