ajout de nouvelles pages

--- a/amis.html
+++ b/amis.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div>
-		<a href="index.html">Accueil</a> - <a href="famille.html">Famille</a> - <a href="amis.html">Meilleurs ami(e)s</a> - Astuces - Recettes
+		<a href="index.html">Accueil</a> - <a href="famille.html">Famille</a> - <a href="amis.html">Meilleurs ami(e)s</a> - <a href="astuces.html">Astuces</a> - <a href="recettes.html">Recettes</a> - <a href="dessins.html">Dessins</a>
 	</div>	
 
    <h3 class="copines">Mes meilleures copines</h3>
