--- a/famille.html
+++ b/famille.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div>
-		<a href="index.html">Accueil</a> - <a href="famille.html">Famille</a> - <a href="amis.html">Meilleurs ami(e)s</a> - Astuces - Recettes
+		<a href="index.html">Accueil</a> - <a href="famille.html">Famille</a> - <a href="amis.html">Meilleurs ami(e)s</a> - <a href="astuces.html">Astuces</a> - <a href="recettes.html">Recettes</a> - <a href="dessins.html">Dessins</a>
 	</div>
 		
 	<h2 class="famille">Ma famille</h2>
