la suite bientot

--- a/astuces.html
+++ b/astuces.html
@@ -12,6 +12,10 @@
 	<div>
 		<a href="index.html">Accueil</a> - <a href="famille.html">Famille</a> - <a href="amis.html">Meilleurs ami(e)s</a> - <a href="astuces.html">Astuces</a> - <a href="recettes.html">Recettes</a> - <a href="dessins.html">Dessins</a>
 	</div>
+
+	<p>
+		<em>La suite bientôt...</em>
+	</p>
 </body>
 
 </html>
